# cycling-analytics

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
examples/: run_data_pipeline.py  test_pipeline_components.py
src/: __init__.py  cli.py  config.py
src/analytics/: __init__.py  advanced.py  performance.py
src/app/: __init__.py  dashboard.py
src/data/: deduplicator.py  ingestion_tracker.py  pipeline_orchestrator.py  validator.py
src/etl/: __init__.py
src/etl/extractors/: __init__.py  csv_extractor.py
src/etl/validators/: __init__.py  integrity_validator.py
src/export/: __init__.py  reports.py
src/integrations/: __init__.py  fit_data_merger.py  fit_extractor.py  fit_parser.py  fit_reprocessor.py  garmin_connect.py  garmin_sync.py  intervals_icu.py  intervals_sync.py
src/ml/: __init__.py  fit_feature_extractor.py  generate_predictions.py  predictions.py  train_garmin.py  train_intervals.py
src/models/: __init__.py  activity.py  fit_data.py
src/storage/: __init__.py  process_csv.py
src/storage/database/: __init__.py  manager.py  schema_migrator.py
src/storage/schemas/: __init__.py  activity_schema.py
tests/: __init__.py  conftest.py  test_csv_extractor.py  test_dashboard.py  test_data_validation.py  test_data_validator.py  test_database.py  test_deduplicator.py  test_equipment_variation.py  test_export.py  test_fit_data_validation.py  test_garmin_data_pipeline.py  test_integration.py  test_intervals_icu.py  test_ml_predictions.py  test_performance.py
